--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="pin-generator half-width">
-                    <input class="form-control" type="text">
-                    <button class="generate-btn">Generate Pin</button>
+                    <input id="pin-display" class="form-control" type="text">
+                    <button id="pin-generate-btn" class="generate-btn">Generate Pin</button>
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="input-section half-width">
-                    <input class="form-control" type="text">
+                    <input id="user-input" class="form-control" type="text">
                     <div class="numbers">
-                        <div class="calc-body">
+                        <div class="calc-body" id="calculator">
                             <div class="calc-button-row">
                                 <div class="button">7</div>
                                 <div class="button">8</div>
@@ -44,16 +44,16 @@
                                 <div class="button">C</div>
                             </div>
                             <div>
-                                <button type="submit" class="submit-btn">Submit</button>
-                                <p class="action-left">3 try left</p>
+                                <button id="submit" type="submit" class="submit-btn">Submit</button>
+                                <p class="action-left" id="action-left">3 try left</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="notify-section">
-                <p class="notify">❌ Pin Didn't Match, Please try again</p>
-                <p class="notify">✅ Pin Matched... Secret door is opening for you</p>
+                <p id="wrong" class="notify">❌ Pin Didn't Match, Please try again</p>
+                <p id="right" class="notify">✅ Pin Matched... Secret door is opening for you</p>
             </div>
         </div>
         <script src="./JS/utilities.js"></script>
